PHP                                                                        NEWS
|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
?? ??? 200?, PHP 5.3.0 Alpha 3
- Upgraded bundled PCRE to version 7.8. (Nuno)
- Upgraded bundled sqlite to version 3.6.2. (Scott)
- Changed error level E_ERROR into E_WARNING in Soap extension methods 
  parameter validation. (Felipe)

- Fixed bug #46106 (Memory leaks when using global statement). (Dmitry)
- Fixed bug #46099 (Xsltprocessor::setProfiling - memory leak). (Felipe, Rob).
- Fixed bug #46087 (DOMXPath - segfault on destruction of a cloned object).
  (Ilia)
- Fixed bug #46086 (Segfault when accessing fileinfo class properties).
  (Scott)
- Fixed bug #46072 (Compile failure under IRIX 6.5.30 building util.c) (Greg)
- Fixed bug #46071 (finfo_open() segfaults when using wrong file name on BSD).
  (Felipe)
- Fixed bug #46060 (Phar::addEmptyDir() breaks) (Greg)
- Fixed bug #46042 (memory leaks with reflection of mb_convert_encoding()).
  (Ilia)
- Fixed bug #45928 (large scripts from stdin are stripped at 16K border).
  (Christian Schneider, Arnaud)
- Fixed bug #45911 (Cannot disable ext/hash). (Arnaud)
- Fixed bug #45392 (ob_start()/ob_end_clean() and memory_limit). (Ilia)
- Fixed bug #45382 (timeout bug in stream_socket_enable_crypto).
  (vnegrier at optilian dot com, Ilia

02 Sep 2008, PHP 5.3.0 Alpha 2
- Removed special treatment of "/tmp" in sessions for open_basedir.
  Note: This undocumented behaviour was introduced in 5.2.2. (Alexey)
- Removed shebang line check from CGI sapi (checked by scanner). (Dmitry)

- Changed session_start() to return false when session startup fails. (Jani)
- Changed property_exists() to check the existence of a property independent of
  accessibility (like method_exists()). (Felipe)
- Changed array_reduce() to allow mixed $initial (Christian Seiler)

- Added function preg_filter() that does grep and replace in one go. (Marcus)